3주차 실습 내용

--- a/doc01.html
+++ b/doc01.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>HTML요소</title>
+        <title>HTML 분석하기</title>
     </head>
     <body>
         <h2>HTML 시작하기</h2>
