중간전과제 추가

--- a/practice/menu2.html
+++ b/practice/menu2.html
@@ -19,28 +19,37 @@
         <tr class="size">
             <th class="c">조식</th>
             <th class="c0">천원의<br>아침밥</th>
-            <td class="c1"><span class="text">백미밥&부대햄찌개</span><br>깍두기/매실차</td>
-            <td class="c2">양송이오징어덮밥<br>매콤콩나물국</td>
-            <td class="c3">베이컨김치볶음밥<br>조랭이미역국</td>
-            <td class="c4">카레꼬마돈까스/장국<br>매콤국물떡볶이</td>
-            <td class="c5">보리밥/얼큰육개장<br><span class="text">쏘야볶음</span></td>
+            <td class="c1"><span class="h">백미밥&부대햄찌개</span><br><span class="h">깍두기/매실차</span></td>
+            <td class="c2"><span class="h">양송이오징어덮밥</span><br><span class="h">매콤콩나물국</span></td>
+            <td class="c3"><span class="h">베이컨김치볶음밥</span><br><span class="h">조랭이미역국</span></td>
+            <td class="c4"><span class="h">카레꼬마돈까스/장국</span><br><span class="h">매콤국물떡볶이</span></td>
+            <td class="c5"><span class="h">보리밥/얼큰육개장</span><br><span class="h">쏘야볶음</span></td>
         </tr>
         <tr class="size">
             <th class="c" rowspan="2">중식</th>
             <th class="c0">오늘의<br>백반</th>
-            <td class="c1">소고기하이라이스<br>맑은콩나물국<br>두반장가지볶음<br>스크렘블에그<br>포기김치</td>
-            <td class="c2">기장밥<br>버섯육개장<br>애플파이준권<br>부추양파겉절이<br>열무김치</td>
-            <td class="c3">현미밥<br>시금치국<br>고추장돈불고기<br><span class="text">감자채햄볶음</span><br>마늘쫑무침</td>
-            <td class="c4">찰흑미밥<br>홍합미역국<br>맛초킹탕수육<br>실곤약야채무침<br>깍두기</td>
-            <td class="c5">보리밥<br>얼갈이된장국<br>김치제육볶음<br>두부구이<br>짜사이무침</td>
+            <td class="c1"><span class="h">소고기하이라이스</span><br><span class="h">맑은콩나물국</span><br>
+                <span class="h">두반장가지볶음</span><br><span class="h">스크렘블에그</span><br><span class="h">포기김치</span></td>
+            <td class="c2"><span class="h">기장밥</span><br><span class="h">버섯육개장</span><br><span class="h">애플파이준권
+                </span><br><span class="h">부추양파겉절이</span><br><span class="h">열무김치</span></td>
+            <td class="c3"><span class="h">현미밥</span><br><span class="h">시금치국</span><br><span class="h">고추장돈불고기</span><br>
+                <span class="h">감자채햄볶음</span><br><span class="h">마늘쫑무침</span></td>
+            <td class="c4"><span class="h">찰흑미밥</span><br><span class="h">홍합미역국</span><br>
+                <span class="h">맛초킹탕수육</span><br><span class="h">실곤약야채무침</span><br><span class="h">깍두기</span></td>
+            <td class="c5"><span class="h">보리밥</span><br><span class="h">얼갈이된장국</span><br><span class="h">김치제육볶음</span><br>
+                <span class="h">두부구이</span><br><span class="h">짜사이무침</span></td>
         </tr>
         <tr class="size">
             <th class="c0">교직원<br>(자율배식)</th>
-            <td class="c1">쌀밥<br>콩비지찌개<br>해물전<br><span class="text">청포묵무침</span><br>감자채볶음<br>배추김치</td>
-            <td class="c2">쌀밥<br>아욱수제비국<br>닭살볶음탕<br>어항가지볶음<br>볼어묵조림<br>배추김치</td>
-            <td class="c3">쌀밥<br>배춧국<br>돈등뼈김치찜<br>콩나물무침<br>사모사튀김<br>깍두기/야구르트</td>
-            <td class="c4">쌀밥<br>얼큰짬뽕<br>탕수육<br>비빔만두<br>단무지<br>배추김치</td>
-            <td class="c5">(대면배식)<br><span class="favorite">꼬치어묵탕</span><br>김치볶음밥<br>배추김치/요플레</td>
+            <td class="c1"><span class="h">쌀밥</span><br><span class="h">콩비지찌개</span><br><span class="h">해물전</span><br>
+                <span class="h">청포묵무침</span><br><span class="h">감자채볶음</span><br><span class="h">배추김치</span></td>
+            <td class="c2"><span class="h">쌀밥</span><br><span class="h">아욱수제비국</span><br><span class="h">닭살볶음탕</span><br>
+                <span class="h">어항가지볶음</span><br><span class="h">볼어묵조림</span><br><span class="h">배추김치</span></td>
+            <td class="c3"><span class="h">쌀밥</span><br><span class="h">배춧국</span><br><span class="h">돈등뼈김치찜</span><br>
+                <span class="h">콩나물무침</span><br><span class="h">사모사튀김</span><br><span class="h">깍두기/야구르트</span></td>
+            <td class="c4"><span class="h">쌀밥</span><br><span class="h">얼큰짬뽕</span><br><span class="h">탕수육</span><br>
+                <span class="h">비빔만두</span><br><span class="h">단무지</span><br><span class="h">배추김치</span></td>
+            <td class="c5">(대면배식)<br><span class="favorite h">꼬치어묵탕</span><br><span class="h">배추김치/요플레</span><br></td>
         </tr>
     </table>
 </html>
