메뉴과제최종

--- a/practice/new.html
+++ b/practice/new.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+<html></html>
+    <head>
+        <title>연습문제</title>
+        <link rel="stylesheet" type="text/css" href="new.css">
+    </head>
+    <body>
+        <h2>우리학교 홍보 페이지</h2>
+        
+    </body>
 </html>
