--- a/practice/new.html
+++ b/practice/new.html
@@ -1,11 +1,29 @@
 <!DOCTYPE html>
-<html></html>
+<html>
     <head>
-        <title>연습문제</title>
+        <title> HTML5 문서에 CSS 적용하기 </title> 
+        <meta charset="utf-8"> <!--한글문자 깨짐 방지-->
         <link rel="stylesheet" type="text/css" href="new.css">
-    </head>
+    </head> 
     <body>
-        <h2>우리학교 홍보 페이지</h2>
-        
+        <header>[header] SM_Bookstore
+            <nav>[nav] 메뉴
+                <a href="">[a] 단행본</a> 
+                <a href="">[a] 간행물</a>
+                <a href="">[a] 보고서</a> 
+                <a href="">[a] 기 타</a> 
+            </nav> 
+        </header>
+        <article>[article] 도서 안내
+            <section> [section] 베스트셀러
+            <ul><li>최윤철, 임순범, 컴퓨터와 IT기술의 이해</li>
+                <li>임순범, 박희민, HTML5 웹프로그래밍 입문</li></ul></section>
+            <section> [section] 추천도서
+            <ul><li>D. Morley, C. Parker, Understanding Computers 15th Ed.</li>	  
+                <li>최윤철, 임순범, 소셜미디어 시대의 인터넷 이해</li>
+            </ul> </section>
+        </article>
+        <aside>[aside]<p>이벤트</p><p>광고</p><p>관련정보</p></aside>
+        <footer>[footer] 작성자: 홍길동 </footer>
     </body>
-</html>
+</html> 
