중간이후 과제 제출본

--- a/task_final/main.html
+++ b/task_final/main.html
@@ -6,8 +6,9 @@
         <title>Welcome to 나은서점</title>
     </head>
     <body>
+    <div class="every">
         <div class="top">
-            <a id="name" href="bookstore.html">나은 서점</a>
+            <a id="name" href="main.html">나은 서점</a>
             <a class="join" id="j1" href="login.html" target="display_k">로그인</a > | 
                 <a class="join" href="">회원가입</a>
         </div>
@@ -61,5 +62,6 @@
                 document.getElementById("memobox").style.display = "none";
             }
         </script>
+    </div>
     </body>
 </html>
